--- a/NeuronalNetwork_Cpp/NeuronalNetwork_Cpp.vcxproj.filters
+++ b/NeuronalNetwork_Cpp/NeuronalNetwork_Cpp.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="OutputNN.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="NeuronalNetwork.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="InputNN.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="OutputNN.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="NeuronalNetwork.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
